# tankgame

./: .gitignore  CMakeLists.txt  README.md  tankgame.sln
.github/: copilot-instructions.md
runtime/: applog.txt  body.gsm  body3.gsm  body4.gsm  nowbody.gsm  nowturret.gsm  nowturret2.gsm  readme.txt  settings.txt
runtime/levels/: level0@@.json  level0@@.txt  level1@@.json  level1@@.txt  level2@@.json  level2@@.txt  level3@@.json  level3@@.txt  level4@@.json  level4@@.txt  level5@@.json  level5@@.txt  level6@@.json  level6@@.txt  level7@@.json  level7@@.txt  level8@@.txt  level9@@.txt  levelA@@.txt  levelC@@.txt  levelE@@.txt  levelF@@.txt  levelG@@.txt  levelH@@.txt  levelI@@.txt  levelK@@.txt  title@@.json  title@@.txt
runtime/sounds/: TGTest3.it  elastik.aiff  neptb.s3m
runtime/sounds/not used/: TGTEST3.XM  TGTest3.it
runtime/texture/: 1.tga  2.tga  3.tga  6.tga  8.tga  cube1.tga  cube12.tga  cube2.tga  cube3.tga  ring.tga  x.tga
src/: App.h  Bullet.cpp  Bullet.h  BulletHandler.cpp  BulletHandler.h  BulletRenderer.cpp  BulletRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  DisplayList.cpp  DisplayList.h  EnemyTankRenderer.cpp  EnemyTankRenderer.h  Entity.h  EntityManager.h  FX.cpp  FX.h  FXEntity.h  FXHandler.cpp  FXHandler.h  GameCubeInputHandler.cpp  GameCubeInputHandler.h  GameTask.cpp  GameTask.h  GameWorld.cpp  GameWorld.h  GenericJoystickInputHandler.cpp  GenericJoystickInputHandler.h  GlobalTimer.cpp  GlobalTimer.h  GraphicsTask.cpp  GraphicsTask.h  ITask.h  InputHandler.h  InputHandlerFactory.cpp  InputHandlerFactory.h  InputTask.cpp  InputTask.h  (+44 more)
src/collision/: CollisionSystem.cpp  CollisionSystem.h
src/combat/: CombatSystem.cpp  CombatSystem.h
src/events/: CollisionEvents.h  Event.h  EventBus.h  Events.h
src/rendering/: BaseRenderer.cpp  BaseRenderer.h  BulletDataExtractor.cpp  BulletDataExtractor.h  BulletRenderer.cpp  BulletRenderer.h  CameraManager.cpp  CameraManager.h  EffectDataExtractor.cpp  EffectDataExtractor.h  EffectRenderer.cpp  EffectRenderer.h  EnemyTankRendererImpl.cpp  EnemyTankRendererImpl.h  HUDData.h  HUDDataExtractor.cpp  HUDDataExtractor.h  HUDRenderer.cpp  HUDRenderer.h  IRenderer.cpp  IRenderer.h  IRenderer_example.cpp  ITankRenderer.h  ItemDataExtractor.cpp  ItemDataExtractor.h  ItemRenderer.cpp  ItemRenderer.h  MenuRenderer.cpp  MenuRenderer.h  NewBulletRenderer.cpp  NewBulletRenderer.h  NewTankRenderer.cpp  NewTankRenderer.h  Phase4Example.h  PlayerTankRenderer.cpp  PlayerTankRenderer.h  PlayerTankRendererImpl.cpp  PlayerTankRendererImpl.h  RenderData.h  RenderingPipeline.cpp  (+17 more)
tankgame/: App.h  BaseTask.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  DisplayList.cpp  DisplayList.h  FXHandler.cpp  FXHandler.h  GameTask.cpp  GameTask.h  GlobalTimer.cpp  GlobalTimer.h  GraphicsTask.cpp  GraphicsTask.h  ITask.h  InputTask.cpp  InputTask.h  Item.cpp  Item.h  LevelHandler.cpp  LevelHandler.h  Logger.cpp  Logger.h  ModelRenderer.cpp  ModelRenderer.h  Singleton.h  SoundTask.cpp  SoundTask.h  Tank.cpp  Tank.h  TankHandler.cpp  TankHandler.h  TaskHandler.cpp  TaskHandler.h  TextRenderer.cpp  TextRenderer.h  VideoTask.cpp  VideoTask.h  (+4 more)
tankgame.xcodeproj/: project.pbxproj
tankgame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tankgame/runtime/: cannon.gsm  cannon2.gsm  readme.txt  run.sh  settings.txt  tankgame  turret.gsm
tankgame/runtime/levels/: level0@@.txt  level1@@.txt  level2@@.txt  level3@@.txt  level4@@.txt  level5@@.txt  level6@@.txt  level7@@.txt  level8@@.txt  level9@@.txt  levelA@@.txt  levelC@@.txt  levelD@@.txt  levelE@@.txt  levelF@@.txt  levelG@@.txt  levelH@@.txt  levelK@@.txt  title@@.txt
tankgame/runtime/sounds/: 9cd.it  avadr.it
tankgame/runtime/texture/: 0.tga  (+18 more)
tankgame_vs/: applog.txt  tankgame_vs.sln  tankgame_vs.vcxproj  tankgame_vs.vcxproj.filters
tests/: CMakeLists.txt  test_main.cpp  test_player.cpp
(+6 files in other folders)
